DSND-2549: WIP commit for company appointment service.