@@ -90,21 +90,16 @@ public class CompanyAppointmentService {
         LOGGER.debug(
                 String.format("Fetching appointments for company [%s] with order by [%s]", companyNumber, orderBy), DataMapHolder.getLogMap());
 
+        List<CompanyAppointmentDocument> allAppointmentData = companyAppointmentRepository.getCompanyAppointments(
+                companyNumber, orderBy, registerType, startIndex, itemsPerPage, registerView,
+                filterEnabled);
+
         MetricsApi metricsApi = companyMetricsApiService.invokeGetMetricsApi(companyNumber).getData();
 
         if (registerView && !companyRegisterService.isRegisterHeldInCompaniesHouse(registerType,
                 metricsApi.getRegisters())) {
             throw new NotFoundException("Register not held at Companies House");
         }
-
-        AppointmentsApi appointmentsCounts = Optional.ofNullable(metricsApi.getCounts())
-                .map(CountsApi::getAppointments)
-                .orElseThrow(() -> new NotFoundException(
-                        String.format("Appointments metrics for company number [%s] not found", companyNumber)));
-
-        List<CompanyAppointmentDocument> allAppointmentData = companyAppointmentRepository.getCompanyAppointments(
-                companyNumber, orderBy, registerType, startIndex, itemsPerPage, registerView,
-                filterEnabled);
 
         if (allAppointmentData.isEmpty()) {
             return new OfficerList()
@@ -120,12 +115,17 @@ public class CompanyAppointmentService {
                     .etag("");
         }
 
+        AppointmentsApi appointmentsCounts = Optional.ofNullable(metricsApi.getCounts())
+                .map(CountsApi::getAppointments)
+                .orElseThrow(() -> new NotFoundException(
+                        String.format("Appointments metrics for company number [%s] not found", companyNumber)));
+
         Counts counts = registerView ? new Counts(appointmentsCounts, registerType) :
                 new Counts(appointmentsCounts, allAppointmentData.getFirst().getCompanyStatus(), filterEnabled);
 
         List<OfficerSummary> officerSummaries = allAppointmentData.stream()
                 .map(appointment -> companyAppointmentMapper.map(appointment, registerView))
-                .collect(Collectors.toList());
+                .toList();
 
         return new OfficerList()
                 .totalResults(counts.getTotalResults())
